--- a/baham/templates/contact.html
+++ b/baham/templates/contact.html
@@ -1,6 +1,6 @@
 {% include 'header.html' %}
 {% include 'navbar.html' %}
 <main>
-    <h1>Home</h1>
+    <h1>Contact</h1>
 </main>
 {% include 'footer.html' %}
